@@ -1,3 +1,8 @@
+2008-10-06  Martin Rubey  <martin.rubey@univie.ac.at>
+
+	* contrib/emacs/fricas.el: fix bug with line continuation, add
+	fricas-nocheck-eval
+
 2008-10-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/patches.lisp: Add back definition of MAP.
